Hayley at EMNPL | November 18, 2024 | Our 5th year PhD student Hayley Ross presented her paper "Is artificial intelligence still intelligence? LLMs generalize to novel adjective-noun pairs, but don’t mimic the full human distribution", co-authored with Kate Davidson and Boston University's Najoung Kim, at the GenBench workshop of the EMNLP conference in Miami, where her paper won the best paper award of the workshop! Huge congrats, Hayley!|/images/ross-awardceremony1.jpg 