@@ -1,3 +1,4 @@
+Publications
 2025
 Masashi Tamura, Nozomi Tomita, Kathryn Davidson | Negative possessive and existential sentences in Japanese Sign Language (JSL) | Poster at Theoretical Issues in Sign Language Research 15, Addis Ababa University, Jan 14-17. ​​​​ | poster.pdf
 Natasha Thalluri, Kathryn Davidson | Universality and variation in sign language comparatives | Poster at Theoretical Issues in Sign Language Research 15, Addis Ababa University, Jan 14-17. ​​​​ | poster.pdf
