@@ -3,10 +3,10 @@
   <h2>Director Kathryn Davidson</h2>
     <nav>
     <ul>
-      <li><a href="#" onclick="loadPage('home.html')">Home</a></li>
+      <li><a href="?page=home">Home</a></li>
       <li><a href="#" onclick="loadPage('people.html')">People</a></li>
-      <li><a href="#" onclick="loadResearch()">Research</a></li>
-      <li><a href="#" onclick="loadPublications()">Publications</a></li>
+      <li><a href="?page=research">Research</a></li>
+      <li><a href="?page=publications">Publications</a></li>
       <!--add new page here with this format:
       <li><a href="#" onclick="loadPage('pagename.html')"Pagename</a></li>
       just change pagename :)-->
