@@ -1,14 +1,11 @@
 <!-- This file is meant to be loaded into index.html -->
 <!-- This is the default page.-->
-<img src="/images/mms.jpg" alt="a bowl of red and white M&Ms with the text Harvard Ling Lab, and Meaning & Modality" style=width:500px;height:auto; align="middle;">
-<h2>Welcome to the Lab!</h2>
-            <p>
-                Welcome to the <b>Meaning and Modality (M&M) Laboratory</b> at Harvard Linguistics! We are interested in understanding the incredible human capacity for language, especially the ability to convey abstract, infinite, specific meanings across the multiple modalities for natural language, including both speech and sign. Our work spans the subfields of formal semantics, pragmatics, syntax, language acquisition, logic and psycholinguistics in an effort to understand the relationship between linguistic meaning, language mode, language development, and human cognition, with special focus on cross-linguistic experimental semantic studies. 
-            </p>
 
-            <h3>Latest News</h3>
-            <ul>
-                <li>
+<img src="/images/mms.jpg" alt="a bowl of red and white M&Ms with the text Harvard Ling Lab, and Meaning & Modality" style=width:500px;height:auto; align="middle;">
+
+        <ul id="news-list">
+            <!--News will be inserted here--> 
+        </ul>
                     <script>
                         //Function to load news from text file
             function loadNews() {
@@ -31,5 +28,4 @@
                 });
             }
                     </script>
-                </li>>
             </ul>
